# albert_farhutdinov_geekshop

./: .gitignore  README.md  requirements.txt
geekshop/: db.json  db.sqlite3  pyproject.toml  requirements.in  requirements.txt  test_db.json  urls.txt
geekshop/adminapp/: forms.py
geekshop/authapp/: admin.py  context_processors.py  forms.py  pipeline.py  tests.py  views.py
geekshop/authapp/migrations/: 0002_auto_20191226_1419.py
geekshop/basketapp/: models.py  urls.py
geekshop/bat/: fill_db.bat
geekshop/geekshop/: geekshop_urls.txt  urls.py
geekshop/geekshop/adminapp/: urls.py  views.py
geekshop/geekshop/authapp/: models.py
geekshop/geekshop/basketapp/: views.py
geekshop/geekshop/bat/: makemigrations.bat  migrate.bat  migrate_and_run.bat
geekshop/geekshop/geekshop/: settings.py
geekshop/geekshop/json/: products.json
geekshop/geekshop/mainapp/: common_context.py  context_processors.py  views.py
geekshop/geekshop/ordersapp/: forms.py  models.py
geekshop/json/: categories.json  data_product_category.json  vk.json
geekshop/mainapp/: models.py  tests_products.py
geekshop/ordersapp/: admin.py  context_processors.py  urls.py  views.py
geekshop/static/css/: style.css
geekshop/static/js/: jquery-3.4.1.js
shop/: .flake8  pyproject.toml
shop/shop/: clean_db.py
shop/shop/admin_app/: apps.py  context_processors.py  forms.py  urls.py  views.py
shop/shop/auth_app/: admin.py  apps.py  context_processors.py  forms.py  models.py  pipeline.py  tests.py  urls.py  views.py
shop/shop/basket_app/: admin.py  apps.py  context_processors.py  models.py  (+2 more)
(+142 files in other folders)
