[tool.poetry]
name = "geekshop"
version = "0.1.0"
description = ""
authors = ["AlbertFarkhutdinov <albertfarhutdinov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.5,<3.9"
django = "<2.2.10"
django-debug-toolbar = "<2.2"
django-debug-toolbar-template-profiler = "<2.1"
django-extensions = "<2.3"
pillow = "<9.4"
psycopg2 = "<2.9"
social_auth_app_django = "<3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
